src/test/deca/context/invalid/int_not.deca
/*
    Description : Test sur la gestion du symbole ! sur des entiers

    Résultat : erreur contextuelle (cf poly papier page 8 : type_unary_op)
*/
{
    int x = !5;
}
// @expected_output deca:7:13: Invalid type for operand ! :int instead of boolean (3.37)

